# quality-lac-data-ref-postcodes

./: .pre-commit-config.yaml  README.md  pyproject.toml  serve.py
.devcontainer/: Dockerfile  devcontainer.json
examples/pyodide-v0.22.1-browser/: app.py  index.html
examples/pyodide-v0.22.1-node/: package-lock.json  package.json  pyodide-test-helper.js  test-qlacref-postcodes.test.js  test.test.js  vitest.config.js
qlacref_postcodes/: __init__.py  _cli.py  _generate.py  _reader.py  _version_resolver.py  postcodes_A.msgpack.br  postcodes_B.msgpack.br  postcodes_C.msgpack.br  postcodes_D.msgpack.br  postcodes_E.msgpack.br  postcodes_F.msgpack.br  postcodes_G.msgpack.br  postcodes_H.msgpack.br  postcodes_I.msgpack.br  postcodes_J.msgpack.br  postcodes_K.msgpack.br  postcodes_L.msgpack.br  postcodes_M.msgpack.br  postcodes_N.msgpack.br  postcodes_O.msgpack.br  postcodes_P.msgpack.br  postcodes_R.msgpack.br  postcodes_S.msgpack.br  postcodes_T.msgpack.br  postcodes_U.msgpack.br  postcodes_W.msgpack.br  postcodes_Y.msgpack.br  postcodes_Z.msgpack.br
