[tool.poetry]
name = "quality-lac-data-ref-postcodes"
version = "2026.1.2.dev"
description = """\
This is a redistribution of the ONS dataset on Lower Tier Local Authority to\
Upper Tier Local Authority Lookup packaged for the Quality Lac Data project.\
\
Source: Office for National Statistics licensed under the Open Government Licence v.3.0\
"""
authors = [
    "Office for National Statistics <sharedcustomercontactcentre@ons.gov.uk>",
    "Kaj Siebert <kaj@k-si.com>",
]
repository = "https://github.com/SocialFinanceDigitalLabs/quality-lac-data-ref-postcodes"
license = "OGL-UK-3.0"
readme = "README.md"
packages = [
    { include = "qlacref_postcodes" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
msgpack = "^1.0.4"
brotli = "^1.0.9"
rich = { version = "^14.3.1", optional = true }
click = { version = "^8.3.1", optional = true }

[tool.poetry.extras]
cli = ["rich", "click"]

[tool.poetry.group.dev.dependencies]
pandas = "2.3.3"
flask = "<4"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
postcodes = "qlacref_postcodes._cli:cli"
serve = "serve:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
